4B/cs444/tests/site/pass/pass_fieldinitializers.joos
/* pass: field initializers */
public class A {
  public A() {}
  protected int x = 42;
}

