4B/cs444/tests/site/fail/fail_multiplevariablesperdeclaration.joos
/* fail: multiple variables per declaration */
public class A {
  public int x,y,z;
}
